[gd_scene load_steps=3 format=3 uid="uid://b7roednj23kkh"]

[ext_resource type="Script" path="res://Non OpSys/Scripts/File Management.gd" id="1_vc2ip"]
[ext_resource type="StyleBox" uid="uid://csrt1dlpscbo6" path="res://Non OpSys/Other Files/folder_box.tres" id="2_piub0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vc2ip")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0750795, 0.167872, 0.148977, 1)

[node name="Bar" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 180.0
offset_right = 220.0
offset_bottom = 1082.0
color = Color(0.016483, 0.0578091, 0.04822, 1)

[node name="Bar2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 219.0
offset_top = -157.0
offset_right = 3.0
offset_bottom = -136.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.016483, 0.0578091, 0.04822, 1)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.016
anchor_bottom = 0.016
offset_left = 239.0
offset_top = -0.280001
offset_right = 1902.0
offset_bottom = 888.72
grow_horizontal = 0

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
columns = 6

[node name="pinned or smth" type="ScrollContainer" parent="."]
layout_mode = 0
offset_top = 73.0
offset_right = 180.0
offset_bottom = 1081.0

[node name="VBoxContainer" type="VBoxContainer" parent="pinned or smth"]
layout_mode = 2

[node name="Special Buttons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Pin" type="Button" parent="Special Buttons"]
layout_mode = 2
theme_override_styles/normal = ExtResource("2_piub0")
text = "Pin"

[node name="NewFolder" type="Button" parent="Special Buttons"]
layout_mode = 2
text = "New Folder"

[node name="Up" type="Button" parent="Special Buttons"]
layout_mode = 2
text = "Up?"

[node name="name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 226.0
offset_top = -134.0
offset_right = 262.0
offset_bottom = -111.0
grow_vertical = 0
scale = Vector2(4.71389, 4.71389)
text = "Path"

[node name="path" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 446.0
offset_top = -89.0
offset_right = -257.0
offset_bottom = -58.0
grow_horizontal = 2
grow_vertical = 0

[node name="Actions" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -237.0
offset_top = -127.0
offset_right = -126.0
offset_bottom = -55.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(2, 2)

[node name="Open" type="Button" parent="Actions"]
layout_mode = 2
text = "Open"

[node name="Cancel" type="Button" parent="Actions"]
layout_mode = 2
text = "Close"

[node name="add_folder" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.039
anchor_top = 0.41
anchor_right = 0.952
anchor_bottom = 0.41
offset_left = 0.119995
offset_top = -174.8
offset_right = 0.159912
offset_bottom = 175.2
color = Color(0.141738, 0.282774, 0.25332, 1)

[node name="name" type="Label" parent="add_folder"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -14.0
offset_right = 45.0
offset_bottom = 14.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "path"

[node name="title" type="Label" parent="add_folder"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -144.0
offset_right = 144.0
offset_bottom = 79.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "Create a new Folder"
horizontal_alignment = 1

[node name="newname" type="LineEdit" parent="add_folder"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 62.0
offset_top = -15.0
offset_right = -25.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Add" type="Button" parent="add_folder"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -83.0
offset_top = 61.0
offset_right = -3.0
offset_bottom = 119.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "Add"

[node name="CancelFolder" type="Button" parent="add_folder"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -49.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 26
text = "Cancel"

[connection signal="pressed" from="Special Buttons/Pin" to="." method="_on_pin_pressed"]
[connection signal="pressed" from="Special Buttons/NewFolder" to="." method="_on_new_folder_pressed"]
[connection signal="pressed" from="Special Buttons/Up" to="." method="_on_up_pressed"]
[connection signal="text_submitted" from="path" to="." method="_on_path_text_submitted"]
[connection signal="pressed" from="Actions/Open" to="." method="_on_open_pressed"]
[connection signal="pressed" from="Actions/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="add_folder/Add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="add_folder/CancelFolder" to="." method="_on_cancel_folder_pressed"]
